--- a/Contact.html
+++ b/Contact.html
@@ -131,7 +131,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="img/back_truck.png" alt="Chania">
+      <img src="img/back_truck.png" alt="dock">
       <div class="carousel-caption">
         <h3>At the dock</h3>
         <p>Unload this thing!</p>
@@ -139,7 +139,7 @@
     </div>
 
     <div class="item">
-      <img src="img/many_trucks.jpg" alt="Chicago">
+      <img src="img/many_trucks.jpg" alt="rest">
       <div class="carousel-caption">
         <h3>Resting</h3>
         <p>Time for a break</p>
@@ -147,7 +147,7 @@
     </div>
 
     <div class="item">
-      <img src="img/sunset_truck.jpg" alt="New York">
+      <img src="img/sunset_truck.jpg" alt="road">
       <div class="carousel-caption">
         <h3>Keep on trucking!</h3>
         <p>This is how we roll!</p>
