--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <img class="img_1" alt="Williamson Transport Delivery Truck" src="img/truckpic.jpg">
      <div class="header-content">
     <h1 class="header-title">DELIVERING VALUE</h1>
-    <h2 class="header-subtitle">Going the extra mile to provide the best service</h2>
+    <h2 class="header-subtitle">Going The Extra Mile to Provide the Best Service</h2>
     <a href="Contact.html" class="btn btn-info" role="button">Learn More</a>
        </div>
    </div>
